Redirect to story instead of launching in fullscreen

--- a/stories/elk-compressed/index.html
+++ b/stories/elk-compressed/index.html
@@ -31,7 +31,7 @@
     <link rel="shortcut icon" href="./ico/favicon.png">
   </head>
 
-  <body>
+  <body data-story-type="Compressed">
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -42,17 +42,12 @@
           </button>
           <a class="brand" href="#">ELK Day of Service Project</a>
           <p class="byline navbar-text">By ELK (Environmental Learning for Kids)</p>
+          <a id="btn-launch-survey" class="btn btn-primary pull-right" href="#">I'm Done</a>
         </div>
       </div>
     </div>
 
-    <div id="instructions-alert" class="alert container">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <p>Please read the entire story, then hit the escape key to continue</p>
-    </div>
-
     <div class="container">
-
       <figure id="images">
         <img src="../img/ELK1-1920x1280.jpg" title="Nicole talking to ELK students." data-caption="ELK alumni, Nicole, talks to current ELK students about her experiences and how ELK helped her."/>
         <img src="../img/ELK2-1920x1280.jpg" title="Before the wall was painted by ELK volunteers and students." data-caption="This photo shows the wall before it had been painted by the ELK students and volunteers."/>
@@ -88,7 +83,8 @@
     <script src="../../js/jquery-1.9.1.min.js"></script>
     <script src="../../js/jquery-migrate-1.1.1.min.js"></script>
     <script src="../../js/bootstrap.js"></script>
-    <script src="../js/common.js"></script>
+    <script src="../../js/jquery.cookie.js"></script>
+    <script src="../../js/story.js"></script>
     <script type="text/javascript">
     (function() {
       var originalCaption = $('figure figcaption').html();
