--- a/stories/elk-poster/index.html
+++ b/stories/elk-poster/index.html
@@ -24,13 +24,13 @@
         ]);
     </script>
     </head>
-    <body>
+    <body data-story-type="Poster">
         <div class="navbar navbar-inverse navbar-fixed-top">
             <div class="navbar-inner">
                 <div class="container">
                     <a class="brand" href="#">ELK Day of Service Project</a>
                     <p class="byline navbar-text">By ELK (Environmental Learning for Kids)</p>
-
+                    <a id="btn-launch-survey" class="btn btn-primary pull-right" href="#">I'm Done</a>
 
                     <div class="nav-collapse collapse pull-right">
                         <nav id="nextprev" class="navbar-text pull-right">
@@ -63,11 +63,6 @@
 
                 </div>
             </div>
-        </div>
-
-        <div id="instructions-alert" class="alert container">
-            <button type="button" class="close" data-dismiss="alert">&times;</button>
-            <p>Please read the entire story, then hit the escape key to continue</p>
         </div>
 
         <div id="impress">
@@ -134,8 +129,9 @@
         <script src="../../js/jquery-1.9.1.min.js"></script>
         <script src="../../js/jquery-migrate-1.1.1.min.js"></script>
         <script src="../../js/bootstrap.js"></script>
+        <script src="../../js/jquery.cookie.js"></script>
+        <script src="../../js/story.js"></script>
         <script src="js/impress.js"></script>
-        <script src="../js/common.js"></script>
         <script>
             ;(function($) {
                 var $nav = $('#nextprev');
