Border around images in linear story
Closes #13

--- a/stories/elk-linear/index.html
+++ b/stories/elk-linear/index.html
@@ -102,7 +102,7 @@
           <figure>
               <img src="../img/ELK4-1920x1280.jpg" />
               <figcaption>After the wall was painted.</figcaption>           
-          <figure>
+          </figure>
       </section>
 
       <section id="section-5">
@@ -115,7 +115,7 @@
 
       <section id="section-6">
           <h2>Spreading fresh seed</h2>              
-          <figure>
+          <figure class="portrait">
               <img src="../img/ELK6-1280x857.jpg" />
               <figcaption>ELK student, Angel, spreading grass seed and cheer.</figcaption>
 
