Make activity description bold

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                 <p>Welcome! As part of the ongoing development of <a href="http://floodlightproject.org/" title="Floodlight">Floodlight</a>, we are collecting data on how readers respond to different story layouts.</p>
                 <p>You can help us build a better <a href="http://floodlightproject.org/" title="Floodlight">Floodlight</a> by participating in this 10-minute exercise.</p>
 
-                <p>The exercise consists of:</p>
+                <p><strong>The exercise consists of:</strong></p>
                 <ol>
-                    <li>Reading a brief story</li>
-                    <li>Answering a few questions about the story</li>
+                    <li><strong>Reading a brief story</strong></li>
+                    <li><strong>Answering a few questions about the story</strong></li>
                 </ol>
 
                 <p>Please feel free to forward this link to anyone who might be able to participate.</p>
